# anki-flashcarder

./: .env.example  .gitignore  main.py  pyproject.toml
anki_templates/: back.html  front.html  styles.css
app/: cambridge_scraper.py  csv_generator.py  llm_processor.py  models.py  pipeline.py  topic_generator.py  utils.py
app/config/: __init__.py  settings.py
