[project]
name = "anki-flashcarder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]
